Resolves: tdf#102957 revert SetMinOutputSizePixel workaround

of

commit afeddaf7e0d11ad9b1df0c80bcc3f50caa87e21a
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Wed Dec 16 10:46:10 2015 +0000

    Related: rhbz#1281906 set a min size on un-resizeable non-layout dialogs

and setting a size-request seems to do the right thing for me now under wayland
so the original problem can be solved that way

Change-Id: Ie2dd71c5a32131a60729448f0665d5cae2a83692