vcl/source/window/syswin.cxx
@@ -1113,10 +1113,6 @@ void SystemWindow::DoInitialLayout()
         mbIsCalculatingInitialLayoutSize = false;
         mbInitialLayoutDone = true;
     }
-    else if (IsDialog() && !(GetStyle() & WB_SIZEABLE))
-    {
-        SetMinOutputSizePixel(GetSizePixel());
-    }
 }
 
 void SystemWindow::doDeferredInit(WinBits /*nBits*/)
